--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -44,6 +45,13 @@ dependencies {
 
     // circular imageview
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+    // Event bus
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    //MultiScreen
+    implementation 'com.intuit.sdp:sdp-android:1.0.5'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.7.1'
