--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".view.activity.UpdateProductActivity"></activity>
+        <activity android:name=".view.activity.ProductActivity"></activity>
+        <activity android:name=".view.activity.UpdateProductActivity" />
         <activity android:name=".view.activity.AddProductCHActivity" />
         <activity android:name=".Namnn.MilkTeaProductDetailActivity" />
         <activity android:name=".Namnn.UpdateActivity" />
@@ -39,8 +40,7 @@
             android:theme="@style/AppTheme.NoActionBar2" />
         <activity
             android:name=".Namnn.ListBillActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <!-- <activity android:name=".image.ImagePickerActivity"/> &lt;!&ndash; uCrop cropping activity &ndash;&gt; -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- <activity android:name=".image.ImagePickerActivity"/> &lt;!&ndash; uCrop cropping activity &ndash;&gt; -->
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
