--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".view.activity.ProductDetailActivity"></activity>
+        <activity android:name=".view.activity.BillActivity"></activity>
+        <activity android:name=".view.activity.ProductDetailActivity" />
         <activity android:name=".view.activity.ListProductActivity" />
         <activity android:name=".view.activity.UpdateProductActivity" />
         <activity android:name=".view.activity.AddProductCHActivity" />
