--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,4 +68,6 @@ dependencies {
     // butterknife
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
 }
