--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".view.activity.BillActivity"></activity>
+        <activity android:name=".view.activity.MainActivity"></activity>
+        <activity android:name=".view.activity.BillActivity" />
         <activity android:name=".view.activity.ProductDetailActivity" />
         <activity android:name=".view.activity.ListProductActivity" />
         <activity android:name=".view.activity.UpdateProductActivity" />
@@ -33,10 +34,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".Namnn.image.ImagePickerActivity" />
-        <activity
-            android:name=".view.activity.MenuActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".view.activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar2" />
