--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
@@ -21,8 +21,6 @@
         <activity android:name=".view.activity.ProductDetailActivity" />
         <activity android:name=".view.activity.ListProductActivity" />
         <activity android:name=".view.activity.UpdateProductActivity" />
-        <activity android:name=".Namnn.MilkTeaProductDetailActivity" />
-        <activity android:name=".Namnn.UpdateActivity" />
         <activity
             android:name=".view.activity.WelcomeActivity"
             android:theme="@style/AppTheme.NoActionBar2">
@@ -32,13 +30,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Namnn.image.ImagePickerActivity" />
         <activity
             android:name=".view.activity.LoginActivity"
             android:theme="@style/AppTheme.NoActionBar2" />
-        <activity
-            android:name=".view.activity.BillActivity$ListBillActivity"
-            android:theme="@style/AppTheme.NoActionBar" /> <!-- <activity android:name=".image.ImagePickerActivity"/> &lt;!&ndash; uCrop cropping activity &ndash;&gt; -->
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
